tests-integration/fixtures/checking/113_int_compare_invalid_no_instance/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Proxy :: forall (k :: Type) (a :: (k :: Type)). Proxy @(k :: Type) (a :: (k :: Type))
invalid :: Compare 5 1 LT => Proxy @Ordering LT
forceSolve :: { invalid :: Proxy @Ordering LT }

Types
Proxy :: forall (k :: Type). (k :: Type) -> Type

Data
Proxy
  Quantified = :0
  Kind = :1


Roles
Proxy = [Phantom]

Diagnostics
error[InvalidImportItem]: Cannot import item 'kind'
  --> 4:23..4:27
  |
4 | import Prim.Ordering (kind Ordering, LT)
  |                       ^~~~
error[NoInstanceFound]: No instance found for: Compare 5 1 LT
  --> 12:1..12:25
   |
12 | forceSolve = { invalid }
   | ^~~~~~~~~~~~~~~~~~~~~~~~
